# fuckircd

./: .gitignore  Cargo.toml  config.example.yaml  reporting_config.example.yaml
src/: main.rs
