[package]
name = "fuckircd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ircie = { path = "../ircie" } 
tokio = { version = "1.28.2", features = ["full"] }
rand = "0.8.5"
log = "0.4.19"
env_logger = "0.10.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"